--- a/Clarity Theme/Mod - Dark Mode.css
+++ b/Clarity Theme/Mod - Dark Mode.css
@@ -1,6 +1,6 @@
-/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 0.5 */
+/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 0.6 */
 
-body { background: #161616 !important; }
+body { background: #161616 none no-repeat center / cover fixed !important; }
 
 a, a:hover {
 	color: #416abe;
@@ -74,9 +74,9 @@ a, a:hover {
 /* General */
 .data.title .link.sort:hover,
 .list-table .more-info .more-content a:hover,
-.data.chapter span:only-of-type:after,
-.data.progress span:only-of-type:after,
-.data.volume span:only-of-type:after
+.completed ~ .data.progress span:after,
+.completed ~ .data.chapter span:after,
+.completed ~ .data.volume span:after
 { color: #416abe !important; }
 
 /* HIGHLIGHT CONTENT BACKGROUND */
